# s390-tools

./: .checkpatch.conf  .clang-format  .clang-tidy  .codespell.ignore  .codespellrc  .editorconfig  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  .shellcheckrc  AUTHORS.md  CHANGELOG.md  CODINGSTYLE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  common.mak  common_autocomp.mak
ap_tools/: Makefile  (+3 more)
rust/: .gitignore  Cargo.toml  Makefile  README.md
rust/cpacfinfo/: Cargo.toml  build.rs
rust/cpacfinfo/man/: cpacfinfo.1
rust/cpacfinfo/src/: cli.rs  main.rs  msa.rs  noop.c  query.rs  stfle.c  stfle.rs
rust/pv/: Cargo.toml  README.md
rust/pv/examples/hash_hkd/: main.rs
rust/pv/openssl_extensions/: Cargo.toml  build.rs
rust/pv/openssl_extensions/src/: akid.rs  crl.rs  lib.rs  stackable_crl.rs
rust/pv/openssl_extensions/tests/: assets
rust/pv/src/: brcb.rs  cli.rs  confidential.rs  crypto.rs  error.rs  lib.rs  pem_utils.rs  req.rs  secret.rs  test_utils.rs  utils.rs  uvattest.rs  uvdevice.rs  uvsecret.rs  verify.rs
rust/pv/src/openssl_extensions/: akid.rs  bio.rs  crl.rs  ml_kem.rs  mod.rs  stackable_crl.rs
rust/pv/src/req/: context.rs  ec_coord.rs  encrypt.rs  header.rs  hostkey.rs  keyslot.rs  mod.rs  request.rs
rust/pv/src/uvattest/: additional.rs  arcb.rs  attest.rs
rust/pv/src/uvdevice/: test.rs
rust/pv/src/uvsecret/: asrcb.rs  ext_secret.rs  guest_secret.rs  retr_secret.rs  secret_list.rs  user_data.rs  uvc.rs
rust/pv/src/verify/: helper.rs  test.rs
rust/pv/tests/: add_secret_request.rs  cert_verifier.rs
rust/pv/tests/assets/cert/: der.crl  der.crt  fake_host.crt  fake_host.key  fake_ibm.crl  fake_ibm.crt  fake_ibm.key  fake_inter_ca.crl  fake_inter_ca.crt  fake_inter_ca.key  fake_root_ca.crl  fake_root_ca.crt  fake_root_ca.key  fake_root_ca_valid.crl  host.crt  host.key  host2.crt  host2.key  host_armonk.crt  host_crt_expired.crt  host_invalid_signing_key.crt  host_invalid_signing_key.key  host_rev.crt  host_rev.key  host_uri_na.crt  ibm.chained.crt  ibm.crl  ibm.crt  ibm.key  ibm_armonk.crl  ibm_armonk.crt  ibm_expired.crt  ibm_invalid_hash.crl  ibm_outdated_early.crl  ibm_outdated_late.crl  ibm_rev.crt  ibm_wrong_issuer.crl  ibm_wrong_subject.crl  ibm_wrong_subject.crt  ibm_wrong_subject.key  (+10 more)
rust/pv/tests/assets/exp/: secure_guest.hdr
rust/pv/tests/assets/exp/asrcb/: assoc_derived_default_cuid_one  assoc_none_default_cuid_one  assoc_simple_default_cuid_one  null_derived_default_cuid_one  (+5 more)
rust/pv/tests/assets/keys/: ecsecp256k1.pem  rsa2048.crt  rsa2048key.pem  rsa2048key.pub.pem  rsa3072.crt  rsa3072key.pem  rsa3072key.pub.pem  rsa4096key.pem
rust/pv_core/: Cargo.toml  README.md
rust/pv_core/src/: apdevice.rs  confidential.rs  error.rs  lib.rs  log.rs  macros.rs  policy.rs  tmpfile.rs  utils.rs  uvattest.rs  uvdevice.rs  uvsecret.rs
rust/pv_core/src/uvdevice/: attest.rs  ffi.rs  info.rs  retr_secret.rs  secret.rs  secret_list.rs  test.rs
rust/pvapconfig/: Cargo.toml  README.md  build.rs
rust/pvapconfig/man/: pvapconfig.1
rust/pvapconfig/src/: ap.rs  cli.rs  config.rs  helper.rs  main.rs  uv.rs
rust/pvattest/: Cargo.toml  README.md  build.rs
rust/pvattest/man/: pvattest-check.1  pvattest-create.1  pvattest-perform.1  pvattest-verify.1  pvattest.1
rust/pvattest/src/: additional.rs  cli.rs  cmd.rs  exchange.rs  main.rs
rust/pvattest/src/cmd/: check.rs  create.rs  perform.rs  verify.rs
rust/pvattest/src/cmd/check/: firmware.rs  host_key.rs  secret_store.rs
rust/pvattest/tests/assets/: asrcb  host.pem.crt
rust/pvattest/tools/: Makefile  pvattest-info  pvextract-hdr
rust/pvebc/: Cargo.toml
rust/pvebc/95sel-ebc/: boot-mount.sh  boot.mount  module-setup.sh  override-crypttab.sh  pvebc-wrapper.sh  sel-ebc-boot-mount.service  sel-ebc-modules.conf  sel-ebc-override-crypttab.service  sel-ebc-paes-enforce.service  sel-ebc-pvebc.service  sel-ebc.crypttab  sel-ebc.target
rust/pvebc/man/: pvebc.1
rust/pvebc/src/: cli.rs  ebc_utils.rs  main.rs
rust/pvimg/: Cargo.toml  README.md  build.rs
rust/pvimg/boot/: Makefile  common_memory_layout.h  stage3a.c  stage3a.h  stage3a.lds.S  stage3b.c  stage3b.h  stage3b.lds.S  stage3b_reloc.S  stage3b_reloc.lds.S
rust/pvimg/examples/create-sehdr/: main.rs
rust/pvimg/examples/tamper_pvimg/: main.rs
rust/pvimg/man/: genprotimg.1  pvimg-create.1  pvimg-info.1  pvimg-test.1  pvimg.1
rust/pvimg/schema/: INFO_JSON_OUTPUT.md  info-v1.schema.json
rust/pvimg/src/: cli.rs  cmd.rs  lib.rs  main.rs  pv_utils.rs  se_img.rs  se_img_comps.rs
rust/pvimg/src/cmd/: common.rs  create.rs  info.rs  test.rs  version.rs
rust/pvimg/src/pv_utils/: error.rs  layout.rs  misc.rs  psw.rs  se_hdr.rs  secured_comp.rs  serializing.rs  uv_keys.rs  uvdata.rs  uvdata_builder.rs
rust/pvimg/src/pv_utils/se_hdr/: brb.rs  builder.rs  flags.rs  hdr_v1.rs  keys.rs
rust/pvimg/src/se_img_comps/: bootloader.rs  cmdline.rs  ipib.rs  kernel.rs  metadata.rs  ramdisk.rs  sehdr.rs  shortpsw.rs  stage3a.rs  stage3b.rs
rust/pvimg/src/se_img_comps/bootloader/: ipl.rs  stage3a_defs.rs  stage3b_defs.rs
rust/pvimg/tools/: check_hostkeydoc
rust/pvinfo/: Cargo.toml  build.rs
rust/pvinfo/src/: cli.rs  constants.rs  handlers.rs  io_utils.rs  main.rs  pvinfo.rs  se_status.rs  strings.rs
rust/pvinfo/tests/assets/query/: facilities  feature_indications  max_address  max_guests  supp_se_hdr_pcf  supp_se_hdr_ver
rust/pvsecret/: Cargo.toml  README.md  build.rs
rust/pvsecret/man/: pvsecret-add.1  pvsecret-create-association.1  pvsecret-create-meta.1  pvsecret-create-retrievable.1  pvsecret-create-update-cck.1  pvsecret-create.1  pvsecret-list.1  pvsecret-lock.1  pvsecret-retrieve.1  pvsecret-verify.1  pvsecret-version.1  pvsecret.1
rust/pvsecret/src/: cli.rs  cmd.rs  main.rs
rust/pvsecret/src/cmd/: add.rs  create.rs  list.rs  lock.rs  retr.rs  verify.rs
rust/pvverify/: Cargo.toml  README.md  build.rs
rust/pvverify/man/: pvverify.1
rust/pvverify/src/: cli.rs  main.rs
rust/utils/: Cargo.toml
rust/utils/src/: cli.rs  exit_code.rs  file.rs  hexslice.rs  hostname.rs  json.rs  lib.rs  log.rs  tmpfile.rs
(+1173 files in other folders)
