[workspace]
members = [
	"cpacfinfo",
	"pv",
	"pv_core",
	"pvapconfig",
	"pvattest",
	"pvsecret",
	"utils",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.75.0"

[workspace.lints.rust]
missing_docs = "deny"
missing_debug_implementations = "warn"
trivial_numeric_casts = "warn"
unstable_features = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"

[profile.release]
lto = true
