[workspace]
members = [
	"cpacfinfo",
	"pv",
	"pv_core",
	"pvapconfig",
	"pvattest",
	"pvimg",
	"pvinfo",
	"pvsecret",
	"utils",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
rust-version = "1.75.0"

[workspace.lints.rust]
missing_docs = { level = "deny", priority = 1 }
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
nonstandard-style = "warn"
trivial_numeric_casts = "warn"
unstable_features = "warn"
unused = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
