[package]
name = "cpacfinfo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.1", features = ["derive"] }
libc = "0.2"
serde = { version = "1.0.164", features = ["derive"]  }
serde_json = "1.0"
utils = { path = "../utils" }
zerocopy = { version="0.7", features = ["derive"] }

[build-dependencies]
cc = "1.0"
clap = { version ="4.1", features = ["derive"]}
lazy_static = "1.1"
