[package]
name = "cpacfinfo"
version = "0.12.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6", features = ["derive"] }
libc = "0.2"
serde = { version = "1.0.228", features = ["derive"]  }
serde_json = "1.0"
utils = { path = "../utils" }
zerocopy = { version="0.8", features = ["derive"] }

[build-dependencies]
cc = "1.2"
clap = { version ="4.6", features = ["derive"]}
lazy_static = "1.5"
