[package]
name = "pv"
version = "1.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
byteorder = "1.3"
curl = "0.4.44"
log = { version = "0.4.6", features = ["std", "release_max_level_debug"] }
openssl = "0.10.57"
serde = { version = "1.0.139", features = ["derive"]  }
thiserror = "1.0.33"
zerocopy = { version="0.7", features = ["derive"] }

openssl_extensions = { path = "openssl_extensions" }
pv_core = { path = "../pv_core" }

[dev-dependencies]
serde_test = "1.0.139"
