[package]
name = "s390_pv"
version = "0.10.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "s390-tools IBM Secure Execution utilities"
keywords = ["s390", "s390x", "IBM_Secure_Execution"]
repository = "https://github.com/ibm-s390-linux/s390-tools/tree/master/rust"
categories = ["hardware-support"]
readme = "README.md"

[dependencies]
byteorder = "1.3"
curl = "0.4.44"
enum_dispatch = "0.3.13"
foreign-types = "0.3.1"
log = { version = "0.4.6", features = ["std", "release_max_level_debug"] }
openssl = "0.10.57"
openssl-sys = "0.9.92"
serde = { version = "1.0.139", features = ["derive"]  }
thiserror = "1.0.33"
zerocopy = { version="0.7", features = ["derive"] }

pv_core = { path = "../pv_core", package = "s390_pv_core", version = "0.10.0" }

[dev-dependencies]
serde_test = "1.0.139"
