[package]
name = "s390_pv"
version = "0.11.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "s390-tools IBM Secure Execution utilities"
keywords = ["s390", "s390x", "IBM_Secure_Execution"]
repository = "https://github.com/ibm-s390-linux/s390-tools/tree/master/rust"
categories = ["hardware-support"]
readme = "README.md"

[lints]
workspace = true

[dependencies]
byteorder = "1.5"
curl = "0.4.47"
enum_dispatch = "0.3.13"
foreign-types = "0.3.2"
log = { version = "0.4.25", features = ["std", "release_max_level_debug"] }
openssl = "0.10.70"
openssl-sys = "0.9.105"
serde = { version = "1.0.217", features = ["derive"]  }
thiserror = "2.0.11"
zerocopy = { version="0.8", features = ["derive"] }

pv_core = { path = "../pv_core", package = "s390_pv_core", version = "0.11.0" }

[dev-dependencies]
serde_test = "1.0.177"
