[package]
name = "s390_pv_core"
version = "0.11.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "s390-tools IBM Secure Execution core utilities"
keywords = ["s390", "s390x", "IBM_Secure_Execution"]
repository = "https://github.com/ibm-s390-linux/s390-tools/tree/master/rust"
categories = ["hardware-support"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
libc = "0.2.168"
log = { version = "0.4.22", features = ["std", "release_max_level_debug"] }
thiserror = "1.0.69"
zerocopy = {version = "0.7", features = ["derive"]}
serde = { version = "1.0.216", features = ["derive"]}
byteorder = "1.5"

[dev-dependencies]
serde_test = "1.0.177"
lazy_static = "1.5"
