[package]
name = "s390_pv_core"
version = "0.11.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "s390-tools IBM Secure Execution core utilities"
keywords = ["s390", "s390x", "IBM_Secure_Execution"]
repository = "https://github.com/ibm-s390-linux/s390-tools/tree/master/rust"
categories = ["hardware-support"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
libc = "0.2.169"
log = { version = "0.4.25", features = ["std", "release_max_level_debug"] }
thiserror = "2.0.11"
zerocopy = {version = "0.8", features = ["derive"]}
serde = { version = "1.0.217", features = ["derive"]}
byteorder = "1.5"
regex = "1.10"

[dev-dependencies]
serde_test = "1.0.177"
lazy_static = "1.5"
