[package]
name = "pvapconfig"
description = "A tool to configure the AP resources inside a SE guest based on UV secrets and an AP config file."
authors = ["Harald Freudenberger <freude@linux.ibm.com>"]
version = "0.11.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap = { version ="4.5", features = ["derive", "wrap_help"]}
lazy_static = "1.5"
openssl = { version = "0.10.70" }
pv_core = { path = "../pv_core", package = "s390_pv_core"}
rand = "0.8"
regex = "1.11"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9"
utils = { path = "../utils" }

[build-dependencies]
clap = { version ="4.5", features = ["derive", "wrap_help"]}
clap_complete = "4.5"
lazy_static = "1.5"
