[package]
name = "pvattest"
version = "0.12.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { version = "1.0.102", features = ["std"] }
base64 = "0.22.1"
byteorder = "1.5"
clap = { version ="4.6", features = ["derive", "wrap_help"]}
curl = "0.4.49"
log = { version = "0.4.29", features = ["std", "release_max_level_debug"] }
openssl = "0.10.80"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.9"
zerocopy = { version="0.8", features = ["derive"] }

pv = { path = "../pv", package = "s390_pv" }
utils = { path = "../utils" }

[build-dependencies]
clap = { version ="4.6", features = ["derive", "wrap_help"]}
clap_complete = "4.6"
log = { version = "0.4", features = ["std", "release_max_level_debug"] }

utils = { path = "../utils" }
