[package]
name = "pvebc"
version = "0.12.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
pv_core = { path = "../pv_core" , package = "s390_pv_core" }
utils = { path = "../utils" }
anyhow = { version = "1.0.95", features = ["std"] }
zerocopy = { version = "0.8.27", features = ["derive"] }

[build-dependencies]
clap = { version ="4.5", features = ["derive"]}
clap_complete = "4.5"

[lints]
workspace = true
