[package]
name = "pvimg"
version = "0.12.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { version = "1.0.102", features = ["std"] }
base64 = "0.22.1"
clap = { version ="4.6", features = ["derive", "wrap_help"]}
deku = "0.18"
deku_derive = "0.18"
enum_dispatch = "0.3.13"
log = { version = "0.4.29", features = ["std", "release_max_level_debug"] }
openssl = "0.10.80"
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0"
thiserror = "2.0.18"

pv = { path = "../pv", package = "s390_pv" }
utils = { path = "../utils" }

[build-dependencies]
anyhow = { version = "1.0.102", features = ["std"] }
clap = { version ="4.6", features = ["derive", "wrap_help"]}
clap_complete = "4.6"
log = { version = "0.4.29", features = ["std", "release_max_level_debug"] }

pv = { path = "../pv", package = "s390_pv" }
utils = { path = "../utils" }

[dev-dependencies]
proptest = "1.11"
