[package]
name = "pvverify"
version = "0.12.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0.95", features = ["std"] }
clap = { version ="4.5", features = ["derive", "wrap_help"]}
log = { version = "0.4.25", features = ["std", "release_max_level_debug"] }

pv = { path = "../pv" , package = "s390_pv" }
utils = { path = "../utils"}

[lints]
workspace = true

[build-dependencies]
clap = { version ="4.5", features = ["derive", "wrap_help"]}
clap_complete = "4.5"

utils = { path = "../utils" }
