[package]
name = "pvverify"
version = "0.12.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { version = "1.0.102", features = ["std"] }
clap = { version ="4.6", features = ["derive", "wrap_help"]}
log = { version = "0.4.29", features = ["std", "release_max_level_debug"] }

pv = { path = "../pv" , package = "s390_pv" }
utils = { path = "../utils"}

[lints]
workspace = true

[build-dependencies]
clap = { version ="4.6", features = ["derive", "wrap_help"]}
clap_complete = "4.6"

utils = { path = "../utils" }
